--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,16 +3,16 @@ services:
   nginx:
     build: ./docker/nginx
     ports:
-      - '8090:80'
+      - '3:80'
     depends_on:
       - php
     volumes:
       - .:/opt/work
     links:
       - php
-    container_name: nginx_AMBIENTE_DEV
+    container_name: nginx_Datafodase
   php:
     build: ./docker/php
     volumes:
       - .:/opt/work
-    container_name: php_AMBIENTE_DEV
+    container_name: php_Datafodase
